src/snapshots/cargo_vet__tests__builtin-simple-delta-broken-cycle.snap
---
source: src/tests.rs
expression: stdout
---
Vetting Failed!

1 unvetted dependencies:
  third-party1:10.0.0 missing ["safe-to-deploy"]

recommended audits for safe-to-deploy:
    cargo vet diff third-party1 7.0.0 8.0.0  (used by first-party)  (+15)

estimated audit backlog: 15 lines

Use |cargo vet certify| to record the audits.

