src/snapshots/cargo_vet__tests__builtin-simple-delta-broken-double-cycle.snap
---
source: src/tests.rs
expression: stdout
---
Vetting Failed!

1 unvetted dependencies:
  third-party1:10.0.0 missing ["safe-to-deploy"]

recommended audits for safe-to-deploy:
    cargo vet diff third-party1 4.0.0 5.0.0  (used by first-party)  (+9)

estimated audit backlog: 9 lines

Use |cargo vet certify| to record the audits.

