src/snapshots/cargo_vet__tests__builtin-simple-deps-full-audited.snap
---
source: src/tests.rs
assertion_line: 1900
expression: stdout
---
Vetting Failed!

0 unvetted dependencies:

nothing to recommend

