src/snapshots/cargo_vet__tests__builtin-simple-deps-init.snap
---
source: src/tests.rs
assertion_line: 1880
expression: stdout
---
Vetting Succeeded (1 fully audited, 0 partially audited, 6 unaudited)

