src/snapshots/cargo_vet__tests__builtin-simple-deps-minimal-audited.snap
---
source: src/tests.rs
assertion_line: 1977
expression: stdout
---
Vetting Succeeded (6 fully audited)

