src/snapshots/cargo_vet__tests__builtin-simple-deps-violation-low-hit.snap
---
source: src/tests.rs
expression: output
---
Violations Found!
  dev:10.0.0
    the own audit 10.0.0
      criteria: ["safe-to-run"]
    conflicts with own violation against *
      criteria: ["safe-to-run"]


