src/snapshots/cargo_vet__tests__builtin-simple-unaudited-adds-uneeded-criteria-indirect.snap
---
source: src/tests.rs
assertion_line: 2426
expression: stdout
---
Vetting Succeeded (5 fully audited, 1 partially audited)

